--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <span class="slider round"></span>
         <span class="status"></span>
     </label>
-        <button id="btnAdd" class="btn">Add note</button>
+        <button id="btnAdd" class="btn">הוסף הערה</button>
 
 
 
