--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <div class="container">
-
+        <h1>ברוכים הבאים לפאנל ניהול תזכורות </h1>
+        <h3>אנא הפעל מצב עריכה כדי להמשיך</h3>
         <label class="switch">
         <input type="checkbox" id="btnEdit">
         <span class="slider round"></span>
