--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
         <div class="tasks">
-            <h2 class="tasksText">Title: תזכורת</h2>
+            <h2 class="tasksText">Title: משימה</h2>
             <p class="tasksText">Text: להביא רשימות</p>
             <p class="tasksText">Date of meeting:5 March 2024  </p>
             <p class="tasksText">Time of meeting:at 08:01 </p>
