--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 </head>
 
 <body>
-<div class="tasks">
-    <h2 class="tasksText">Title: תזכורת</h2>
-    <p class="tasksText">Text: פגישה</p>
-    <p class="tasksText">Date of meeting:1 March 2024  </p>
-    <p class="tasksText">Time of meeting:at 13:08 </p>
-    <p class="tasksText">Location:ישראל</p>
-    
-</div>
-    <div class="container">  
+    <div class="tasks">
+        <h2 class="tasksText">Title: תזכורת</h2>
+        <p class="tasksText">Text: פגישה</p>
+        <p class="tasksText">Date of meeting:1 March 2024 </p>
+        <p class="tasksText">Time of meeting:at 13:08 </p>
+        <p class="tasksText">Location:ישראל</p>
+
+    </div>
+    <div class="container">
         <h1>ברוכים הבאים לפאנל ניהול תזכורות </h1>
-        <h3>אנא הפעל מצב עריכה כדי להמשיך</h3>
+        <h3 id="textEdit">אנא הפעל מצב עריכה כדי להמשיך</h3>
         <label class="switch">
         <input type="checkbox" id="btnEdit">
         <span class="slider round"></span>
